(fix) O3-2526 Resolve Overlay Issue Blocking LeftNav Access on Tablet Devices

--- a/packages/framework/esm-styleguide/src/_overrides.scss
+++ b/packages/framework/esm-styleguide/src/_overrides.scss
@@ -33,6 +33,10 @@
   border-right: none;
 }
 
+.cds--side-nav__overlay-active {
+  display: none;
+}
+
 /* Icon button */
 .cds--btn--icon-only {
   // Apply a size layout token that sets the default size of the icon-only button to `sm`
